[tool.poetry]
name = "repl_python3_Senjibot"
version = "0.1.0"
description = ""
authors = ["Senjienji <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
Flask = "^2.0.2"
replit = "^3.2.4"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
